--- a/res/layout/room_search.xml
+++ b/res/layout/room_search.xml
@@ -24,18 +24,17 @@
 		android:id="@+id/room_editor_name"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="10dip"
 		android:layout_marginTop="10dip"
 		android:layout_below="@id/build_spinner"
+		android:layout_alignLeft="@id/build_spinner_name"
 		android:text="@string/editor_name"
 		android:textColor="@color/black" />
 	<EditText
 		android:id="@+id/room_editor"
-		android:layout_width="180dip"
+		android:layout_width="200dip"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="10dip"
-		android:layout_below="@+id/build_spinner"
-		android:layout_toRightOf="@+id/room_editor_name"
+		android:layout_below="@id/build_spinner"
+		android:layout_alignLeft="@id/build_spinner"
 		android:numeric="integer"
 		android:maxLength="3"/>
 	<Button
