--- a/res/layout/books.xml
+++ b/res/layout/books.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="fill_parent"
@@ -7,17 +8,23 @@
   >
   	 <!-- Header -->
   	 <include layout="@layout/header_search"/>
-  	  
 	 <!-- 复合列表，包含保存的搜索和热门搜索 -->
-	 <ListView android:id="@+id/search_section_list"
+	 <TextView 
+	     android:id="@+id/books_list_info"
+	     android:layout_width="fill_parent"
+	     android:layout_height="wrap_content"
+		 android:padding="3dip"
+		 android:background="#65999999"
+	     android:textColor="@color/status_text"/>
+	 <ListView
+	    android:id="@+id/books_list"
 	  	android:layout_width="fill_parent"
-	  	android:layout_height="fill_parent"
+	  	android:layout_height="wrap_content"
 	  	android:layout_weight="1" 
  	    android:cacheColorHint="#00000000"
 	    android:fadeScrollbars="true"
     	android:divider="@drawable/dashed_line"
     	android:dividerHeight="1dip"
     	android:fastScrollEnabled="true"
-	/>        
-				  
+	/>
 </LinearLayout>
